@@ -4,10 +4,11 @@
     ADDED: new krarc (password handling, type autodetection, writing
            out archiver error messages, step into hidden archives,...)
 
+    FIXED: [Debian: 352367] useractions with terminal output ignores configured terminal
     FIXED: last tabs are not saved, if an old config value is present
     FIXED: panel popup gets focus at opening, gives focus to panel at hiding
-    FIXED: viewer, detaching tab changes 'Editing' to 'Viewing'           
-            
+    FIXED: viewer, detaching tab changes 'Editing' to 'Viewing'
+
      I18N: Updated Spanish translation (thanks Alejandro Araiza Alvarado)
      I18N: Updated German translation
      I18N: viewer: 'Editing', 'Viewing' can be translated
